syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartfactory.proto";
option java_outer_classname = "MachineHealthProto";

package machinehealth;

// Machine Health Service
service MachineHealthService {
  // Simple RPC
  rpc CheckStatus(MachineRequest) returns (MachineStatus);

  // Server Streaming RPC
  rpc StreamHealthData(MachineRequest) returns (stream MachineStatus);
}

// Request message
message MachineRequest {
  string machine_id = 1;
}

// Response message
message MachineStatus {
  string machine_id = 1;
  double temperature = 2;
  double vibration = 3;
  bool is_operational = 4;
  string timestamp = 5;
}
